Temporarily disable Payment screen (2.4) - Skip to match after photo upload

--- a/prototype/manager.html
+++ b/prototype/manager.html
@@ -4591,9 +4591,9 @@
                                     <span class="page-id">2.3</span> 📸 Photos
                                 </div>
                                 <span class="flow-arrow">→</span>
-                                <div class="flow-node" data-component="payment" data-page-id="2.4" data-connection="aws">
+                                <div class="flow-node disabled" data-component="payment" data-page-id="2.4" data-connection="aws" style="opacity: 0.4; text-decoration: line-through;" title="Temporarily disabled - pending Stripe integration">
                                     <span class="node-status"></span>
-                                    <span class="page-id">2.4</span> 💳 Payment
+                                    <span class="page-id">2.4</span> 💳 Payment (DISABLED)
                                 </div>
                             </div>
                         </div>
