--- a/prototype/index.html
+++ b/prototype/index.html
@@ -771,7 +771,7 @@
                             <path d="M19 12H5M12 19l-7-7 7-7"/>
                         </svg>
                     </button>
-                    <span class="header-step">Step 4 of 5</span>
+                    <span class="header-step">Step 4 of 4</span><!-- TEMP: Was "Step 4 of 5" - Payment (2.4) disabled -->
                 </div>
                 <div class="profile-setup-content">
                     <h2>Add your photos</h2>
@@ -1156,8 +1156,9 @@
                 </div>
             </div>
 
-            <!-- Payment Screen -->
-            <div class="screen payment-screen" id="payment">
+            <!-- Payment Screen (2.4) - TEMPORARILY DISABLED -->
+            <!-- TODO: Re-enable when Stripe integration is complete -->
+            <div class="screen payment-screen" id="payment" style="display: none !important;" data-disabled="true">
                 <div class="screen-header">
                     <button class="back-btn" onclick="showScreen('profile-setup')">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
