Fix payment screen: Remove display:none !important that was blocking screen visibility

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -1157,8 +1157,8 @@
             </div>
 
             <!-- Payment Screen (2.4) - TEMPORARILY DISABLED -->
-            <!-- TODO: Re-enable when Stripe integration is complete -->
-            <div class="screen payment-screen" id="payment" style="display: none !important;" data-disabled="true">
+            <!-- Payment Screen (Step 2.4) -->
+            <div class="screen payment-screen" id="payment" style="display: none;">
                 <div class="screen-header">
                     <button class="back-btn" onclick="showScreen('profile-setup')">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -4978,7 +4978,7 @@
         </div>
     </div>
 
-    <script src="app.js?v=34"></script>
+    <script src="app.js?v=35"></script>
     <script>
         // Quick login helper - run in console if having login issues
         window.quickLogin = function() {
